--- a/api/composer.json
+++ b/api/composer.json
@@ -11,9 +11,11 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jenssegers/mongodb": "^3.6",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "mongodb/mongodb": "^1.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
