gitflow-feature-stash: api_readme

--- a/api/.env.example
+++ b/api/.env.example
@@ -13,6 +13,13 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+MONGODB_CONNECTION=mongodb
+MONGODB_HOST=127.0.0.1
+MONGODB_PORT=27017
+MONGODB_DATABASE=off
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
